--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "clipboard": "^2.0.6",
     "core-js": "^3.6.5",
     "element-ui": "^2.14.1",
     "less": "^3.12.2",
     "less-loader": "^7.1.0",
     "normalize.css": "^8.0.1",
+    "uuid": "^8.3.1",
     "vue": "^2.6.11",
     "vue-router": "^3.4.9",
     "vuedraggable": "^2.24.3"
